small ios fixes for statusbar and recovery vertical alignment on hires

--- a/src/app/pages/recover-mnemonic/recover-mnemonic.page.scss
+++ b/src/app/pages/recover-mnemonic/recover-mnemonic.page.scss
@@ -1,19 +1,17 @@
 ion-slides{
-  background: url(/assets/bg/bg_chips_w_98_b.jpg) center bottom;
+  background: var(--csc-background-setup);
   background-size: cover;
-  min-height: 100%;
+  min-height: 100vh;
   display: flex;
 
 }
 ion-card{
   margin: 20px;
-  --background: var(--ion-color-light);
+  --background: var(--ion-color-light-tint);
   border-radius: 10px;
 }
-ion-card{
-    --background: var(--ion-color-light-tint);
-    border-radius: 10px;
-}
+
+
 ion-item{
   --background: var(--ion-color-light-tint);
 }
